--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
     font-size: 10px;
-    font-family:  "Yusei Magic", sans-serif;
+    font-family: "Yusei Magic", sans-serif;
     background-color: white;
 }
 
@@ -34,4 +34,9 @@ body {
     background-color: #eee3d7;
     padding: 0 20px 20px 20px;
     border: 5px solid rgb(94, 94, 93);
+}
+
+.dogs {
+    width: 450px;
+    object-fit: contain
 }
